--- a/application.yml
+++ b/application.yml
@@ -7,3 +7,8 @@ eureka:
       defaultZone: http://localhost:8761/eureka
   instance:
     prefer-ip-address: true
+    
+    
+spring:
+  application:
+    name: API-GATEWAY
